--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,9 @@
     </footer>
 
     <!--End footer-->
+
+    <script type="module" src="./config.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
